--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -15,7 +15,7 @@ This section introduces the focus points of the research content and the objecti
 In SCM, a product's life cycle can be roughly divided into the many phases the product goes through, down from the raw materials up until the finished product ends in the hands of a consumer. Starting in the raw materials, most products undergo iterations of processing and shipment, traveling from one place to another, while being transformed in successively more refined versions and changing owners. This holds true for any product in any kind of industry, and even the simplest of products which might not require any processing (for instance, fresh produce), have to be shipped from their place of origin to the place where they will be sold.
 
 
-\textbf{The improvement of the management of this life cycle is one of the main objectives of this thesis. This improvement, however, has many points of focus. Some were already briefly introduced in Sections~\ref{supply_chains} and~\ref{supply_chain_challenges}, from which the following points are summarized as being important:}
+\textbf{The improvement of the management of this life cycle is one of the main objectives of this thesis. This improvement, however, has many points of focus. Some were already briefly introduced in Sections~\ref{supply_chains} and~\ref{sec:supply-chain-challenges}, from which the following points are summarized as being important:}
 
 \begin{itemize}
 % Speed of delivery
