--- a/references.bib
+++ b/references.bib
@@ -593,3 +593,10 @@ title = {{Cloud Computing Is Transforming Supply Chain Management}},
 url = {https://www.sdcexec.com/sourcing-procurement/article/12125647/cloud-computing-is-transforming-supply-chain-management},
 year = {2015}
 }
+
+@article{Prokle2017,
+author = {Prokle, Michael},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Theory and Practice of Supply Chain Synchronization.pdf:pdf},
+title = {{Theory and Practice of Supply Chain Synchronization}},
+year = {2017}
+}
