--- a/thesis.tex
+++ b/thesis.tex
@@ -121,19 +121,29 @@
 
 	\mainmatter
 
-	\todo{pedro: compor captions das tabelas, por em cima e com nome correto}
-	\todo{pedro: fix the use of abbreviations so that they are more consistent}
-	\todo{pedro: compor tamanhos das tabelas}
-	\todo{pedro: por so 2 casas decimais nas tabelas}
-	\todo{pedro: compor imagens dos graficos}
-	\todo{pedro: consistent with the use of bold or italic, especially on thesis questions and in the items of the survey}
-	\todo{pedro: corrigir localizacoes das figuras}
-	\todo{pedro: captions das questions na survey, compor para terem QUESTION}
+	%CONTENT
 	\todo{pedro: introducao + structure}
 	\todo{pedro: abstract precisa de ser revisto de maneira a sumariar bem todo o conteúdo da tese}
+	
+	%TABLES:
+	\todo{pedro: compor captions das tabelas, por em cima e com nome correto}
+	\todo{pedro: compor tamanhos das tabelas}
+	\todo{pedro: por so 2 casas decimais nas tabelas}
+
+	%SURVEY
+	\todo{pedro: compor imagens dos graficos}
+	\todo{pedro: corrigir localizacoes das figuras}
+	\todo{pedro: captions das questions na survey, compor para terem QUESTION}
+	\todo{pedro: passar tabela estatistica para anexo}
+
+	%TEXT CONSISTENCY, GRAMMAR CHECKS AND GENERAL WRITING
+	\todo{pedro: consistent with the use of bold or italic, especially on thesis questions and in the items of the survey}
+	\todo{pedro: fix the use of abbreviations so that they are more consistent}
+	
+	%EXTRA FORMATTING
 	\todo{pedro: ter os anexos}
 	\todo{pedro: ter glossario e/ou abreviacoes}
-	\todo{pedro: passar tabela estatistica para anexo}
+	
 
 	%\subsection*{2. Naming Conventions and Definitions}
 	%glossary + abreviations    \todo{fcorreia: isto devia aparecer talvez no início do documento, num glossário geral}
